--- a/WWDCScholars/Base.lproj/Scholars.storyboard
+++ b/WWDCScholars/Base.lproj/Scholars.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="8qZ-uI-XB1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="8qZ-uI-XB1">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,7 +15,7 @@
                     <tabBarItem key="tabBarItem" title="Scholars" image="scholarsTabBarIconUnfilled" selectedImage="scholarsTabBarIconFilled" id="euh-VL-n7g"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hyK-7l-vvB">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -38,13 +39,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Na7-a8-isB" customClass="ScholarsMapContainerView" customModule="WWDCScholars" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="138" width="414" height="675"/>
+                                <rect key="frame" x="0.0" y="142" width="414" height="671"/>
                                 <connections>
                                     <segue destination="20p-BO-DzZ" kind="embed" identifier="ScholarsMapViewController" id="UxO-GT-tpF"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LPF-51-alX" customClass="ScholarsListContainerView" customModule="WWDCScholars" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="138" width="414" height="758"/>
+                                <rect key="frame" x="0.0" y="142" width="414" height="754"/>
                                 <connections>
                                     <segue destination="PH2-Q1-fYf" kind="embed" identifier="ScholarsListViewController" id="a6y-Bj-bAc"/>
                                 </connections>
@@ -56,7 +57,7 @@
                                         <rect key="frame" x="110" y="34" width="20" height="20"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading Scholars…" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3pu-Wm-ADa">
-                                        <rect key="frame" x="47.5" y="72" width="145" height="30"/>
+                                        <rect key="frame" x="48" y="72" width="144" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="7VC-Tq-mHf"/>
                                         </constraints>
@@ -76,7 +77,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ufY-CR-ih1" customClass="NavigationBarExtensionView" customModule="WWDCScholars" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="414" height="50"/>
+                                <rect key="frame" x="0.0" y="92" width="414" height="50"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AfL-6f-7Ot">
                                         <rect key="frame" x="0.0" y="10" width="414" height="30"/>
@@ -128,7 +129,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Na7-a8-isB" firstAttribute="leading" secondItem="xVN-Qy-XxB" secondAttribute="leading" id="234-t8-T2q"/>
                             <constraint firstAttribute="trailing" secondItem="Na7-a8-isB" secondAttribute="trailing" id="Q3W-1w-yV7"/>
@@ -174,12 +175,12 @@
                         <viewControllerLayoutGuide type="bottom" id="y8N-Zc-85H"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="a32-D6-iJu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="758"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="754"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pzc-cf-gJB">
-                                <rect key="frame" x="0.0" y="44" width="414" height="714"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="706"/>
+                                <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rzr-ac-a4m">
                                     <size key="itemSize" width="120" height="140"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -236,7 +237,7 @@
                                 </cells>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="Pzc-cf-gJB" secondAttribute="bottom" id="0wH-2Z-aNJ"/>
                             <constraint firstItem="Pzc-cf-gJB" firstAttribute="top" secondItem="za2-YH-8gJ" secondAttribute="bottom" id="WiK-LR-X0s"/>
@@ -271,18 +272,18 @@
                         <viewControllerLayoutGuide type="bottom" id="NZu-SL-3N9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="HuZ-Wc-4hm">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="675"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="671"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WIB-Nb-tF1">
-                                <rect key="frame" x="0.0" y="44" width="414" height="631"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="623"/>
                                 <connections>
                                     <outlet property="delegate" destination="20p-BO-DzZ" id="17S-5T-Mwk"/>
                                 </connections>
                             </mapView>
                             <view contentMode="scaleToFill" placeholderIntrinsicWidth="44" placeholderIntrinsicHeight="88" translatesAutoresizingMaskIntoConstraints="NO" id="8m8-NB-xU6" customClass="HoverBar" customModule="WWDCScholars" customModuleProvider="target">
-                                <rect key="frame" x="362" y="52" width="44" height="88"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <rect key="frame" x="362" y="56" width="44" height="88"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -306,12 +307,18 @@
             <point key="canvasLocation" x="2484" y="-940.02998500749629"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="G5l-BR-PGf"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="mapNavigationBarIconFilled" width="22" height="20"/>
         <image name="scholarsTabBarIconFilled" width="26" height="20"/>
         <image name="scholarsTabBarIconUnfilled" width="26" height="20"/>
+        <systemColor name="groupTableViewBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="G5l-BR-PGf"/>
-    </inferredMetricsTieBreakers>
 </document>
