Update SFSafariViewController colors, add view submission button

--- a/WWDCScholars/Base.lproj/Scholars.storyboard
+++ b/WWDCScholars/Base.lproj/Scholars.storyboard
@@ -308,7 +308,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="G5l-BR-PGf"/>
+        <segue reference="35h-42-TPM"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="mapNavigationBarIconFilled" width="22" height="20"/>
